Add option to enable/disable auto intense fetch feature

--- a/toogoodtogo_ha_mqtt_bridge/settings.json
+++ b/toogoodtogo_ha_mqtt_bridge/settings.json
@@ -3,5 +3,6 @@
   "locale": "en_us",
   "cleanup": true,
   "data_dir": "./data",
-  "randomize_calls": true
+  "randomize_calls": true,
+  "enable_auto_intense_fetch": false
 }
